--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0", shrink-to-fit=no>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Bonneville Ice Rink</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./reset.css">
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -15,42 +15,8 @@
     <link rel="stylesheet" href="./stylesheet.css">
 </head>
 <body>
-    <div class="slides fadeAnim">
-        <!-- BOOTSTRAP CAROUSEL -->
-        <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100 slide_1" alt="">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100 slide_2" alt="">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100 slide_3" alt="">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100 slide_4" alt="">
-                </div>
-            </div>
-        </div>
-        <!-- BOOTSTRAP CAROUSEL -->
-    
-        <div class="centered"><h1>Bonneville</h1> Ice Rink</div>
-        <div class="top-right">
-            <a class="btn btn-warning" href="#" role="button">Sign Release Form</a>
-        </div>
-    </div>
-    <div class="optionsContainer">
-        <div class="pricing">
-            <h1 class="pricingOps">Pricing:</h1>
-            <h5 class="pricingOps">Adult: $8.00</h5>
-            <h5 class="pricingOps">Child: $5.00</h5>
-        </div>
-        <div class="options">
-            <a class="btn btn-light" href="#" role="button">Sign Release Form</a>
-            <a class="btn btn-outline-light" href="./contact.html" role="button">Contact Us</a>
-            <a class="btn btn-outline-light" href="#" role="button">Group Reservations</a>
-        </div>
+    <div class="contactLanding">
+        <a class="btn btn-outline-dark top-left" href="./bonnevilleIceRink.html" role="button">Home</a>
     </div>
     <footer>
         <div>
@@ -71,5 +37,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <!-- BOOTSTRAP -->
+    
 </body>
 </html>
