Working on contact sheet

--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,19 @@
 <body>
     <div class="contactLanding">
         <a class="btn btn-outline-dark top-left" href="./bonnevilleIceRink.html" role="button">Home</a>
+        <form>
+            <div class="form-row">
+                <div class="form-group col-md-5">
+                    <label>Name*</label>
+                    <input type="text" class="form-control" placeholder="Name" required >
+                </div>
+                <div class="form-group col-md-5">
+                    <label>Email*</label>
+                    <input type="email" class="form-control" placeholder="Email" required >
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Sign in</button>
+        </form>
     </div>
     <footer>
         <div>
