--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Contact Us</title>
     <link rel="stylesheet" href="./reset.css">
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -18,17 +18,15 @@
     <div class="contactLanding">
         <a class="btn btn-outline-dark top-left" href="./bonnevilleIceRink.html" role="button">Home</a>
         <form>
-            <div class="form-row">
-                <div class="form-group col-md-5">
-                    <label>Name*</label>
-                    <input type="text" class="form-control" placeholder="Name" required >
-                </div>
-                <div class="form-group col-md-5">
-                    <label>Email*</label>
-                    <input type="email" class="form-control" placeholder="Email" required >
-                </div>
+            <h1>Contact Us</h1>
+            <div class="contactForm">
+                <input type="text" name="name" placeholder="Name" required>
+                <input type="text" name="email" placeholder="Email" required>
             </div>
-            <button type="submit" class="btn btn-primary">Sign in</button>
+            <div>
+                <textarea name="message" id="" cols="30" rows="10" placeholder="Type message here..." required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary bottom-right">Send</button>
         </form>
     </div>
     <footer>
