finished mobile responsiveness for contact page.

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,9 @@
             <div>
                 <textarea name="message" id="" cols="30" rows="10" placeholder="Type message here..." required></textarea>
             </div>
-            <button type="submit" class="btn btn-primary bottom-right">Send</button>
+            <div>
+                <button type="submit" class="btn btn-primary bottom-right">Send</button>
+            </div>
         </form>
     </div>
     <footer>
