added text of release form to textarea

--- a/bonnevilleIceRink.html
+++ b/bonnevilleIceRink.html
@@ -35,7 +35,7 @@
         </div>
         <!-- BOOTSTRAP CAROUSEL -->
     
-        <div class="centered"><h1>Jefferson</h1> Ice Rink</div>
+        <div class="centered"><h1>Jefferson</h1> <span>Ice Rink</span></div>
         <div class="top-right">
             <a class="btn btn-warning" href="./releaseForm.html" role="button">Sign Release Form</a>
         </div>
