--- a/releaseForm.html
+++ b/releaseForm.html
@@ -21,8 +21,24 @@
             <h1>Release Form</h1>
             <p class="reservationP">Waiver and Release of Liability</p>
             <div>
-                <textarea name="message" id="" cols="30" rows="10" placeholder="Additional details..." required></textarea>
-            </div>    
+                <textarea 
+                    type="text"
+                    name="releaseForm" 
+                    cols="30" 
+                    rows="10" 
+                    readonly
+                >
+1.	I the undersigned, hereby represent and certify that I am at least 18 years of age and I am voluntarily requesting to operate or ride on or in a recreational product from Pinnacle Recreation LLC. I have been adequately informed of applicable operation safety and pertinent regulations prior to the use of such product or service.
+                
+2.	I hereby acknowledge and agree to assume the entire risk of any accidents or personal injury including death I might suffer during my use and I undertake to know, respect and comply with all applicable rules and regulations governing the use of the product, to wear the appropriate protective clothing and gear and to use the product in a safe manner and to not use the product under the influence alcohol, drugs, or anything that could impair my faculties.  I hereby acknowledge that Pinnacle Recreation LLC, and Jefferson County and all manufactures of product rented by Pinnacle Recreation LLC, make no representations concerning the use of the recreational products or their condition on use.
+
+3.	In consideration of the opportunity to operate product(s), the receipt and adequacy are hereby acknowledged, I in my personal name and in the name of any heir, successors, beneficiaries, and other legal representatives release and discharge Pinnacle Recreation LLC together with Jefferson County, its affiliates together with all manufactures that supply product, their subsidiaries and affiliated companies, their employees, and/or their officers and their authorized dealers of all claims for any damage and/or personal injury, including death and damage to the property that I may now have or may hereafter have resulting from or by reason of cause, matter or thing whatsoever arising from the manufacture, design or ride of the product, whether due to negligence or not.
+
+4.	It is understood that nobody else other than me will use the product(s) and that I am otherwise responsible for any other persons using the product(s).  I am responsible to make sure that if any other person uses the product(s) they are of legal age to operator the product(s), fully understand the laws governing the use of the product(s) and have signed a copy of this Waiver and release Liability.  This release shall insure to the benefit of and be binding upon the successor and assigns of the operator.
+
+5.	In the event of damages to the products during the rental period, I understand that I am responsible for the entire cost of the repair.  I understand that if a mechanical failure occurs, which is of no fault of my own, and I will alert Pinnacle Recreation LLC. and give them the opportunity to troubleshoot and correct the problem, credit may be given for that product only.  A late return charge of $15 may be charged for every 15 minutes late on product returned after the specified date and time.
+                </textarea>
+            </div>
             <div class="reservationForm">
                 <input type="text" name="name" placeholder="First Name" maxlength="50" required>
                 <input type="text" name="name" placeholder="Last Name" maxlength="50" required>
