--- a/releaseForm.html
+++ b/releaseForm.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="reservationLanding">
-        <a class="btn btn-outline-dark top-left" href="./bonnevilleIceRink.html" role="button">Home</a>
+        <a class="btn btn-outline-dark top-left" href="./iceRink.html" role="button">Home</a>
         <form>
             <h1>Release Form</h1>
             <p class="reservationP">Waiver and Release of Liability</p>
@@ -37,6 +37,8 @@
 4.	It is understood that nobody else other than me will use the product(s) and that I am otherwise responsible for any other persons using the product(s).  I am responsible to make sure that if any other person uses the product(s) they are of legal age to operator the product(s), fully understand the laws governing the use of the product(s) and have signed a copy of this Waiver and release Liability.  This release shall insure to the benefit of and be binding upon the successor and assigns of the operator.
 
 5.	In the event of damages to the products during the rental period, I understand that I am responsible for the entire cost of the repair.  I understand that if a mechanical failure occurs, which is of no fault of my own, and I will alert Pinnacle Recreation LLC. and give them the opportunity to troubleshoot and correct the problem, credit may be given for that product only.  A late return charge of $15 may be charged for every 15 minutes late on product returned after the specified date and time.
+
+I the undersigned, declare that I have been adequately instructed on how to operate this product, that I have inspected the product and that I am satisfied with its safety features and condition as marked on the illustrated check out sheet(s) and that I have read, understood and voluntarily executed this final and complete Waiver and Release of Liability without any inducement, assurance, guarantee, or representation being made to me other than the foregoing written agreement.
                 </textarea>
             </div>
             <div class="reservationForm">
@@ -44,10 +46,10 @@
                 <input type="text" name="name" placeholder="Last Name" maxlength="50" required>
             </div>
             <div class="reservationForm">
-                <input type="date" required>
+                <input type="date" value="today" required>
                 <input type="text" name="email" placeholder="Email" maxlength="50" required>
             </div>
-            <div>
+            <div style="margin-top: 10px">
                 <button type="submit" class="btn btn-primary bottom-right">Submit</button>
             </div>
         </form>
