--- a/iceRink.html
+++ b/iceRink.html
@@ -66,6 +66,22 @@
 
 
 
+<!-- FIREBASE -->
+    <script src="https://www.gstatic.com/firebasejs/5.7.2/firebase.js"></script>
+    <script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyD6LSJo_d0boKz8TaPadYZJfDBncPD8gUQ",
+    authDomain: "jefferson-ice-rink.firebaseapp.com",
+    databaseURL: "https://jefferson-ice-rink.firebaseio.com",
+    projectId: "jefferson-ice-rink",
+    storageBucket: "jefferson-ice-rink.appspot.com",
+    messagingSenderId: "233282857924"
+  };
+  firebase.initializeApp(config);
+</script>
+<!-- FIREBASE -->
+
     <!-- BOOTSTRAP -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
