--- a/iceRink.html
+++ b/iceRink.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0", shrink-to-fit=no>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Jefferson Ice Rink</title>
+    <title>Lakeside Rink</title>
     <link rel="stylesheet" href="./reset.css">
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -35,7 +35,7 @@
         </div>
         <!-- BOOTSTRAP CAROUSEL -->
     
-        <div class="centered"><h1>Jefferson</h1> <span>Ice Rink</span></div>
+        <div class="centered"><h1>Lakeside</h1> <span>Ice Rink</span></div>
         <div class="top-right">
             <a class="btn btn-warning" href="./releaseForm.html" role="button">Sign Release Form</a>
         </div>
@@ -43,8 +43,13 @@
     <div class="optionsContainer">
         <div class="pricing">
             <h1 class="pricingOps">Pricing:</h1>
-            <h5 class="pricingOps">Adult: $8.00</h5>
-            <h5 class="pricingOps">Child: $5.00</h5>
+            <h5 class="pricingOps">Adult: $7.00</h5>
+            <h5 class="pricingOps">Child*: $5.00</h5>
+        </div>
+        <div class="pricing">
+            <p class="pricingOps">*Children 12 and younger</p>
+            <!-- <h5 class="pricingOps">Adult: $7.00</h5> -->
+            <!-- <h5 class="pricingOps">Child*: $5.00</h5> -->
         </div>
         <div class="options">
             <a class="btn btn-light" href="./releaseForm.html" role="button">Sign Release Form</a>
@@ -52,10 +57,18 @@
             <a class="btn btn-outline-light" href="./reservations.html" role="button">Group Reservations</a>
         </div>
     </div>
+    <div>
+        <a class="weatherwidget-io" href="https://forecast7.com/en/43d67n111d91/rigby/?unit=us" data-label_1="RIGBY" data-label_2="WEATHER" data-theme="original" >RIGBY WEATHER</a>
+        <script>
+        !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+        </script>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1963.391355657058!2d-111.9037702535268!3d43.69892484818981!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53546dc99cccd5c1%3A0x1d7457f345fae9da!2sJefferson+County+Lake!5e0!3m2!1sen!2sus!4v1547707083513" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
     <footer>
         <div>
-            <a href="tel: 773-966-8473" class="fa fa-phone"></a>
-            <a href="mailto: spencer.ricks9@gmail.com" class="fa fa-envelope"></a>
+            <a href="tel: 208-757-3999" class="fa fa-phone"></a>
+            <a href="mailto: lakesiderink@gmail.com" class="fa fa-envelope"></a>
             <a href="#" class="fa fa-facebook"></a>
             <a href="#" class="fa fa-instagram"></a>
         </div>
