--- a/releaseForm.html
+++ b/releaseForm.html
@@ -17,7 +17,7 @@
 <body>
     <div class="reservationLanding">
         <a class="btn btn-outline-dark top-left" href="./iceRink.html" role="button">Home</a>
-        <form>
+        <form action="https://formspree.io/lakesiderink@gmail.com" method="POST" >
             <h1>Release Form</h1>
             <p class="reservationP">Waiver and Release of Liability</p>
             <div>
@@ -42,22 +42,25 @@ I the undersigned, declare that I have been adequately instructed on how to oper
                 </textarea>
             </div>
             <div class="reservationForm">
-                <input type="text" name="name" placeholder="First Name" maxlength="50" required>
-                <input type="text" name="name" placeholder="Last Name" maxlength="50" required>
+                <p>**By my eSignature below, I certify that I have read, fully understand, and accept all terms of the foregoing statement. Please signify your acceptance by entering the information requested in the fields below.**</p>
             </div>
             <div class="reservationForm">
-                <input type="date" value="today" required>
+                <input type="text" name="name" placeholder="Name" maxlength="50" required>
+                <!-- <input type="text" name="last name" placeholder="Last Name" maxlength="50" required> -->
+            </div>
+            <div class="reservationForm">
+                <input type="date" name="date" value="today" required>
                 <input type="text" name="email" placeholder="Email" maxlength="50" required>
             </div>
             <div style="margin-top: 10px">
-                <button type="submit" class="btn btn-primary bottom-right">Submit</button>
+                <button type="submit" value="send" class="btn btn-primary bottom-right">Submit</button>
             </div>
         </form>
     </div>
     <footer>
         <div>
-            <a href="tel: 773-966-8473" class="fa fa-phone"></a>
-            <a href="mailto: spencer.ricks9@gmail.com" class="fa fa-envelope"></a>
+            <a href="tel: 208-757-3999" class="fa fa-phone"></a>
+            <a href="mailto: lakesiderink@gmail.com" class="fa fa-envelope"></a>
             <a href="#" class="fa fa-facebook"></a>
             <a href="#" class="fa fa-instagram"></a>
         </div>
