changed container width for weather and map

--- a/iceRink.html
+++ b/iceRink.html
@@ -57,7 +57,7 @@
             <a class="btn btn-outline-light" href="./reservations.html" role="button">Group Reservations</a>
         </div>
     </div>
-    <div>
+    <div class="weatherMap">
         <a class="weatherwidget-io" href="https://forecast7.com/en/43d67n111d91/rigby/?unit=us" data-label_1="RIGBY" data-label_2="WEATHER" data-theme="original" >RIGBY WEATHER</a>
         <script>
         !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
